--- a/task1/requirements.txt
+++ b/task1/requirements.txt
@@ -1,5 +1,5 @@
-certifi==2024.8.30
-charset-normalizer==3.3.2
-idna==3.8
-requests==2.32.3
-urllib3==2.2.2
+distlib==0.3.8
+filelock==3.16.0
+platformdirs==4.3.2
+pyperclip==1.9.0
+virtualenv==20.26.4
